<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.realkarim.apps.realmadridcard.CardActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/full_name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_height"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nicknames"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/short_name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/founded"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ground"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chairman"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/head_coach"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/league"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize" />


</LinearLayout>
